# artusplugin-main

./: .gitignore  .gitlab-ci.yml  .readthedocs.yml  CHANGELOG.md  README.md  librairies-python.pth  messages-js.cfg  messages.cfg  package-lock.json  pyproject.toml  setup.cfg  setup.py
artusplugin/: CONTRIBUTING.md  LICENSE
artusplugin/docs/BDD/: TRAC.mwb.bak
artusplugin/docs/mindmaps/TracFeatures/: TracFeatures.mm
artusplugin/docs/workflows/: ECM_Technique_WF_fr.graphml  ECR_WF_en.graphml  ECR_WF_fr.graphml  PRF_WF_fr.graphml
artusplugin/src/artusplugin/: Ooo.py  advanced_workflow.py  api.py  cache.py  form.py  macros.py  util.py
docs/: Makefile  conf.py  example.ipynb  make.bat
docs/BDD/: TRAC.mwb
docs/mindmaps/TracFeatures/: TracFeatures.html  TracFeatures.js  toxhtml.xsl
docs/workflows/: DOC_WF_en.graphml  DOC_WF_fr.graphml  ECM_Documentaire_WF_en.graphml  ECM_Documentaire_WF_fr.graphml  ECM_Technique_WF_en.graphml  EFR_WF_en.graphml  EFR_WF_fr.graphml  PRF_WF_en.graphml
src/artusplugin/: Ooo.py  __init__.py  advanced_workflow.py  api.py  artus_ldap.py  cache.py  form.py  jtransformer.py  ldap_utilities.py  macros.py  meggitt_ldap.py  model.py  util.py  web_ui.py
src/artusplugin/admin/: web_ui.py
src/artusplugin/announcer/: api.py  db_default.py  specified.py
src/artusplugin/buildbot/: model.py  web_ui.py
src/artusplugin/genshi/: functions.py
src/artusplugin/htdocs/: artus_admin.js  ct_jtransform.js  threaded_comments.js
src/artusplugin/ldap/: ldap_utilities.py
src/artusplugin/requirements/: db.py  model.py
(+27 files in other folders)
